--- a/segunda/tarde/neural_networks/Rede Neural_Intuição.ipynb
+++ b/segunda/tarde/neural_networks/Rede Neural_Intuição.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neste notebook, vamos implementar Redes Neurais de forma manual para tentar entender intuitivamente como elas sáo implementadas."
+    "Neste notebook, vamos implementar Redes Neurais de forma manual para tentar entender intuitivamente como elas são implementadas."
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -97,6 +97,7 @@
     "    cost = 0.5 * np.sum((y - out)**2)\n",
     "    \n",
     "    # backpropagation\n",
+    "    \n",
     "    # insira seu código aqui!"
    ]
   },
@@ -214,9 +215,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(a,b):\n",
+    "    print(a+b)\n",
+    "    \n",
+    "test(1,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,8 +256,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
