--- a/quarta/tarde/GANs/GANs_Summer_School_Keras.ipynb
+++ b/quarta/tarde/GANs/GANs_Summer_School_Keras.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Generative Adversarial Networks in Keras**\n",
+    "Generative Adversarial Networks in Keras\n",
     "\n",
     "First let's import all the necessary libraries\n",
     "In this case Keras is running in a Tensorflow backend"
@@ -12,17 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,7 +33,8 @@
     "from keras.callbacks import ModelCheckpoint,LearningRateScheduler\n",
     "import random\n",
     "from keras.optimizers import SGD\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -53,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
@@ -71,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_train = x_train.astype('float32') / 255.\n",
@@ -91,10 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "n=60\n",
@@ -102,7 +89,7 @@
     "x_train=x_train[0:n]\n",
     "x_test=x_test[n:n+n]\n",
     "\n",
-    "noise_factor = 0.5\n",
+    "noise_factor = 0.1\n",
     "x_train_noisy = x_train + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=x_train.shape) \n",
     "x_test_noisy = x_test + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=x_test.shape) \n",
     "\n",
@@ -119,10 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_train=x_train.reshape((n,28,28,1))\n",
@@ -143,10 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(200)\n",
@@ -164,15 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 30\n",
-    "nb_classes = 10 # 10 classes for y_train (0,1,2,3,4,5,6,7,8,9)\n",
-    "img_rows, img_cols = 28, 28 #sqrt of 784\n",
+    "nb_classes = 10\n",
+    "img_rows, img_cols = 28, 28\n",
     "nb_filters = 32\n",
     "pool_size = (2, 2)\n",
     "kernel_size = (3, 3)\n",
@@ -191,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -201,25 +182,25 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 28, 28, 1)         0         \n",
+      "input_3 (InputLayer)         (None, 28, 28, 1)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        320       \n",
+      "conv2d_8 (Conv2D)            (None, 28, 28, 32)        320       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 14, 14, 32)        9248      \n",
+      "conv2d_9 (Conv2D)            (None, 14, 14, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 32)          0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 7, 7, 32)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 7, 7, 32)          9248      \n",
+      "conv2d_10 (Conv2D)           (None, 7, 7, 32)          9248      \n",
       "_________________________________________________________________\n",
-      "up_sampling2d_1 (UpSampling2 (None, 14, 14, 32)        0         \n",
+      "up_sampling2d_3 (UpSampling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 32)        9248      \n",
+      "conv2d_11 (Conv2D)           (None, 14, 14, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "up_sampling2d_2 (UpSampling2 (None, 28, 28, 32)        0         \n",
+      "up_sampling2d_4 (UpSampling2 (None, 28, 28, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 28, 28, 1)         289       \n",
+      "conv2d_12 (Conv2D)           (None, 28, 28, 1)         289       \n",
       "=================================================================\n",
       "Total params: 28,353\n",
       "Trainable params: 28,353\n",
@@ -233,18 +214,19 @@
     "\n",
     "\n",
     "input_img = Input(shape=(28, 28, 1))\n",
-    "x = Conv2D(32, (3, 3), activation='sigmoid', padding='same')(input_img)\n",
+    "\n",
+    "x = Conv2D(32, (3, 3), activation='relu', padding='same')(input_img)\n",
     "x = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "x = Conv2D(32, (3, 3), activation='sigmoid', padding='same')(x)\n",
+    "x = Conv2D(32, (3, 3), activation='relu', padding='same')(x)\n",
     "x = MaxPooling2D((2, 2), padding='same')(x)\n",
-    "x = Conv2D(32, (3, 3), activation='sigmoid', padding='same')(x)\n",
+    "x = Conv2D(32, (3, 3), activation='relu', padding='same')(x)\n",
     "x = UpSampling2D((2, 2))(x)\n",
-    "x = Conv2D(32, (3, 3), activation='sigmoid', padding='same')(x)\n",
+    "x = Conv2D(32, (3, 3), activation='relu', padding='same')(x)\n",
     "x = UpSampling2D((2, 2))(x)\n",
     "decoded = Conv2D(1, (3, 3), activation='sigmoid', padding='same')(x)\n",
     "generator = Model(input_img, decoded)\n",
     "generator.compile(loss='mean_squared_error', optimizer=sgd,metrics = ['accuracy'])\n",
-    "generator.summary()"
+    "generator.summary()\n"
    ]
   },
   {
@@ -256,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -266,29 +248,29 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_6 (Conv2D)            (None, 26, 26, 32)        320       \n",
+      "conv2d_13 (Conv2D)           (None, 26, 26, 32)        320       \n",
       "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 26, 26, 32)        0         \n",
+      "activation_5 (Activation)    (None, 26, 26, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 24, 24, 32)        9248      \n",
+      "conv2d_14 (Conv2D)           (None, 24, 24, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 24, 24, 32)        0         \n",
+      "activation_6 (Activation)    (None, 24, 24, 32)        0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 12, 12, 32)        0         \n",
+      "max_pooling2d_6 (MaxPooling2 (None, 12, 12, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 12, 12, 32)        0         \n",
+      "dropout_3 (Dropout)          (None, 12, 12, 32)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 4608)              0         \n",
+      "flatten_2 (Flatten)          (None, 4608)              0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               589952    \n",
+      "dense_3 (Dense)              (None, 128)               589952    \n",
       "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 128)               0         \n",
+      "activation_7 (Activation)    (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 128)               0         \n",
+      "dropout_4 (Dropout)          (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                1290      \n",
+      "dense_4 (Dense)              (None, 10)                1290      \n",
       "_________________________________________________________________\n",
-      "activation_4 (Activation)    (None, 10)                0         \n",
+      "activation_8 (Activation)    (None, 10)                0         \n",
       "=================================================================\n",
       "Total params: 600,810\n",
       "Trainable params: 600,810\n",
@@ -302,14 +284,14 @@
     "discriminator.add(Conv2D(nb_filters, (kernel_size[0], kernel_size[1]),\n",
     "                        padding='valid',\n",
     "                        input_shape=input_shape))\n",
-    "discriminator.add(Activation('sigmoid'))\n",
+    "discriminator.add(Activation('relu'))\n",
     "discriminator.add(Conv2D(nb_filters, (kernel_size[0], kernel_size[1])))\n",
-    "discriminator.add(Activation('sigmoid'))\n",
+    "discriminator.add(Activation('relu'))\n",
     "discriminator.add(MaxPooling2D(pool_size=pool_size))\n",
     "discriminator.add(Dropout(0.25))\n",
     "discriminator.add(Flatten())\n",
     "discriminator.add(Dense(128))\n",
-    "discriminator.add(Activation('sigmoid'))\n",
+    "discriminator.add(Activation('relu'))\n",
     "discriminator.add(Dropout(0.5))\n",
     "discriminator.add(Dense(10))\n",
     "discriminator.add(Activation('softmax'))\n",
@@ -326,17 +308,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def trainable(net, val):\n",
     "    net.trainable = val\n",
     "    for k in net.layers:\n",
     "       k.trainable = val\n",
-    "trainable(generator, True)\n",
+    "trainable(generator, False)\n",
     "\n",
     "gan_input = Input(batch_shape=(None, 28,28,1))\n",
     "\n",
@@ -347,15 +327,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compile the GAN = Discriminator(Generator(input))"
+    "We compile the GAN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "GAN = Model(gan_input, gan_level2)\n",
@@ -373,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -381,32 +359,72 @@
      "output_type": "stream",
      "text": [
       "Discriminator epoch 0\n",
-      "Epoch 1/2\n",
-      "100/100 [==============================] - 0s - loss: 2.3213 - acc: 0.0500     \n",
-      "Epoch 2/2\n",
-      "100/100 [==============================] - 0s - loss: 2.3130 - acc: 0.1100     \n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.3335 - acc: 0.0900       \n",
       "Generator\n",
-      "Epoch 1/2\n",
-      "100/100 [==============================] - 0s - loss: 0.0899 - acc: 0.1400     \n",
-      "Epoch 2/2\n",
-      "100/100 [==============================] - 0s - loss: 0.0894 - acc: 0.1400     \n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0897 - acc: 0.1600     \n",
       "Discriminator epoch 1\n",
-      "Epoch 1/2\n",
-      "100/100 [==============================] - 0s - loss: 2.2793 - acc: 0.0900     \n",
-      "Epoch 2/2\n",
-      "100/100 [==============================] - 0s - loss: 2.2266 - acc: 0.1800     \n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.2853 - acc: 0.1500     \n",
       "Generator\n",
-      "Epoch 1/2\n",
-      "100/100 [==============================] - 0s - loss: 0.0893 - acc: 0.1700     \n",
-      "Epoch 2/2\n",
-      "100/100 [==============================] - 0s - loss: 0.0893 - acc: 0.1700     \n"
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0896 - acc: 0.1200     \n",
+      "Discriminator epoch 2\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.2848 - acc: 0.1600     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0894 - acc: 0.1200     \n",
+      "Discriminator epoch 3\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.2484 - acc: 0.1700     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0896 - acc: 0.1400     \n",
+      "Discriminator epoch 4\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.2337 - acc: 0.1500     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0890 - acc: 0.1400     \n",
+      "Discriminator epoch 5\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.2214 - acc: 0.2100     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0895 - acc: 0.1600     \n",
+      "Discriminator epoch 6\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.1978 - acc: 0.2300     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0894 - acc: 0.1500     \n",
+      "Discriminator epoch 7\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.1634 - acc: 0.2700     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0895 - acc: 0.1800     \n",
+      "Discriminator epoch 8\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.1150 - acc: 0.2900     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0910 - acc: 0.0800     \n",
+      "Discriminator epoch 9\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 2.1042 - acc: 0.2800     \n",
+      "Generator\n",
+      "Epoch 1/1\n",
+      "100/100 [==============================] - 0s - loss: 0.0909 - acc: 0.1300     \n"
      ]
     }
    ],
    "source": [
-    "nb_epochs=2\n",
-    "rate=1 #proportion of update of Discriminator:Generator\n",
-    "for i in range(0,nb_epochs):\n",
+    "nb_epochs=1\n",
+    "rate=5\n",
+    "for i in range(0,10):\n",
     "    print('Discriminator epoch', i)\n",
     "    discriminator.fit(x_train_noisy,np.array(y_train),\n",
     "                    epochs=nb_epochs,\n",
@@ -420,15 +438,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we reset the variables that were one-hot encoded to calculate accuracy in training and test set"
+    "Now we reset all variables that were reshaped and one-hot encoded to calculate accuracy in training and test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
@@ -442,16 +458,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Train: 0.11\n",
+      "Accuracy Test: 0.09\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Accuracy Train:',1-np.count_nonzero(y_train-np.argmax(GAN.predict(x_train_noisy),axis=1))/n)\n",
+    "print('Accuracy Train:',accuracy_score(y_train,np.argmax(GAN.predict(x_train_noisy),axis=1)))\n",
     "\n",
-    "print('Accuracy Test:',1-np.count_nonzero(y_test-np.argmax(GAN.predict(x_test_noisy),axis=1))/n)"
+    "print('Accuracy Test:',accuracy_score(y_test,np.argmax(GAN.predict(x_test_noisy),axis=1)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -470,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
